--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ build-backend = "hatchling.build"
 [project]
 name = "minitorch"
 version = "0.5"
+dependencies = [
+
+]
 
 [tool.pyright]
 include = ["**/minitorch"]
